force-app/main/default/objects/Log__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <label>Error_Code</label>
    <type>TextArea</type>
</CustomField>