force-app/main/default/objects/Log__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>TextArea</type>
</CustomField>