force-app/main/default/objects/Log__c/fields/parentId__c.field-meta.xml
<CustomField>
    <fullName>parentId__c</fullName>
    <label>parent</label>
    <type>TextArea</type>
</CustomField>